--- a/ios/AwesomeProject/Info.plist
+++ b/ios/AwesomeProject/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>EuclidCircularB-Bold.ttf</string>
+		<string>EuclidCircularB-BoldItalic.ttf</string>
+		<string>EuclidCircularB-Italic.ttf</string>
+		<string>EuclidCircularB-Light.ttf</string>
+		<string>EuclidCircularB-LightItalic.ttf</string>
+		<string>EuclidCircularB-Medium.ttf</string>
+		<string>EuclidCircularB-MediumItalic.ttf</string>
+		<string>EuclidCircularB-Regular.ttf</string>
+		<string>EuclidCircularB-SemiBold.ttf</string>
+		<string>EuclidCircularB-SemiBoldItalic.ttf</string>
+	</array>
 </dict>
 </plist>
