--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native/new-app-screen": "0.81.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-svg": "^15.12.1"
   },
