--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@react-navigation/stack": "^7.4.8",
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-device-info": "^14.0.4",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.4",
     "react-native-svg": "^15.12.1"
   },
   "devDependencies": {
