--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/material-top-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
@@ -23,6 +24,7 @@
     "react-native": "0.81.0",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.15.4",
